Frontend: fix line separator not showing (and updated styling)

--- a/frontend/src/NoteContentView/styles.module.scss
+++ b/frontend/src/NoteContentView/styles.module.scss
@@ -33,6 +33,10 @@
     & pre {
         margin: 0;
     }
+    & hr {
+        color: transparent;
+        border-bottom: 1px solid var(--color-border);
+    }
 }
 
 .editContentView {
